# ai-local-bench

./: .gitignore  CONTRIBUTING.md  LICENSE  PDR.md  README.md  pyproject.toml  run_ubuntu_14b_proof.sh  run_ubuntu_battery.sh  run_ubuntu_battery_resume_from_7b_long.sh  run_windows_battery.ps1  run_windows_battery_full.ps1
.github/ISSUE_TEMPLATE/: benchmark_result_submission.md  bug_report.md
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/image/: image-comfyui-basic.json  image-comfyui-sd15-windows-amd-template.json  image-comfyui-sdxl-windows-amd-template.json  image-comfyui-vram-stress-windows-amd-template.json  workflow-basic.json
benchmarks/text/: llamacpp-qwen2.5-3b-ubuntu-amd-rocm-latency.json  llamacpp-qwen2.5-3b-ubuntu-amd-rocm-long-context.json  llamacpp-qwen2.5-3b-ubuntu-amd-rocm-throughput.json  llamacpp-qwen2.5-3b-windows-amd-vulkan-latency.json  llamacpp-qwen2.5-3b-windows-amd-vulkan-long-context.json  llamacpp-qwen2.5-3b-windows-amd-vulkan-throughput.json  llamacpp-qwen2.5-7b-ubuntu-amd-rocm-latency.json  llamacpp-qwen2.5-7b-ubuntu-amd-rocm-long-context.json  (+26 more)
docs/: methodology.md  project-framing.md  result-schema.md  suite-definitions.md
results/: ai-local-bench-results.before-token-rate-backfill.csv  ai-local-bench-results.csv  ubuntu-rocm-vs-windows-vulkan-qwen14b-comparison.md
scripts/: repair-rocm-6.1.1-partial.sh  repair-rocm-llvm-links.sh  trace_llamacpp_vulkan.ps1  upgrade-rocm-6.1.1.sh
tests/: test_cli.py  test_collectors.py  test_ollama_runner.py  test_reporting.py  test_runners.py  test_suite_validation.py
(+282 files in other folders)
