[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-local-bench"
version = "0.1.0"
description = "Reproducible cross-platform benchmarks for local AI inference on consumer hardware."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AI Local Bench Contributors" }
]
license = { text = "MIT" }
dependencies = [
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ai-local-bench = "ai_local_bench.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
